数据看板与可视化模块、统计报表模块（完成）
预留了base子模块